include/ristretto255.h

        #define RISTRETTO_WORD_BITS 64 /**< The number of bits in a word */
        #define RISTRETTO_WORD_BITS 32 /**< The number of bits in a word */
typedef uint64_t ristretto_word_t;      /**< Word size for internal computations */
typedef int64_t ristretto_sword_t;      /**< Signed word size for internal computations */
typedef uint64_t ristretto_bool_t;      /**< "Boolean" type, will be set to all-zero or all-one (i.e. -1u) */
typedef __uint128_t ristretto_dword_t;  /**< Double-word size for internal computations */
typedef __int128_t ristretto_dsword_t;  /**< Signed double-word size for internal computations */
typedef uint32_t ristretto_word_t;      /**< Word size for internal computations */
typedef int32_t ristretto_sword_t;      /**< Signed word size for internal computations */
typedef uint32_t ristretto_bool_t;      /**< "Boolean" type, will be set to all-zero or all-one (i.e. -1u) */
typedef uint64_t ristretto_dword_t;     /**< Double-word size for internal computations */
typedef int64_t ristretto_dsword_t;     /**< Signed double-word size for internal computations */
/** RISTRETTO_TRUE = -1 so that RISTRETTO_TRUE & x = x */
extern const ristretto_bool_t RISTRETTO_TRUE;
/** RISTRETTO_FALSE = 0 so that RISTRETTO_FALSE & x = 0 */
extern const ristretto_bool_t RISTRETTO_FALSE;
/** Another boolean type used to indicate success or failure. */
typedef enum {
    RISTRETTO_SUCCESS = -1, /**< The operation succeeded. */
    RISTRETTO_FAILURE = 0   /**< The operation failed. */
} ristretto_error_t;
/** Overwrite data with zeros.  Uses memset_s if available. */
void ristretto_bzero (
    void *data,
    size_t size
) RISTRETTO_NONNULL;
/** @cond internal */
#define RISTRETTO255_SCALAR_LIMBS ((253-1)/RISTRETTO_WORD_BITS+1)
/** @endcond */

/** The number of bits in a scalar */
#define RISTRETTO255_SCALAR_BITS 253
typedef struct {
    ristretto_word_t limb[RISTRETTO255_FIELD_LIMBS];
} __attribute__((aligned(32))) gf_25519_t;
/** @endcond */

/** Number of bytes in a serialized point. */
#define RISTRETTO255_SER_BYTES 32
/** Number of bytes in an elligated point.  For now set the same as SER_BYTES
 * but could be different for other curves.
 */
#define RISTRETTO255_HASH_BYTES 32
/** Number of bytes in a serialized scalar. */
#define RISTRETTO255_SCALAR_BYTES 32
/** Number of bits in the "which" field of an elligator inverse */
#define RISTRETTO255_INVERT_ELLIGATOR_WHICH_BITS 5
/** The cofactor the curve would have, if we hadn't removed it */
#define RISTRETTO255_REMOVED_COFACTOR 8
/** Representation of a point on the elliptic curve. */
typedef struct {
    /** @cond internal */
    gf_25519_t x,y,z,t; /* Twisted extended homogeneous coordinates */
    /** @endcond */
} ristretto255_point_t;
/** Precomputed table based on a point.  Can be trivial implementation. */
struct ristretto255_precomputed_s;
/** Precomputed table based on a point.  Can be trivial implementation. */
typedef struct ristretto255_precomputed_s ristretto255_precomputed_s;
/** Size and alignment of precomputed point tables. */
extern const size_t ristretto255_sizeof_precomputed_s, ristretto255_alignof_precomputed_s;
/** Representation of an element of the scalar field. */
typedef struct {
    /** @cond internal */
    ristretto_word_t limb[RISTRETTO255_SCALAR_LIMBS];
    /** @endcond */
} ristretto255_scalar_t;
/** The scalar 1. */
extern const ristretto255_scalar_t ristretto255_scalar_one;
/** The scalar 0. */
extern const ristretto255_scalar_t ristretto255_scalar_zero;
/** The identity (zero) point on the curve. */
extern const ristretto255_point_t ristretto255_point_identity;
/** An arbitrarily-chosen base point on the curve. */
extern const ristretto255_point_t ristretto255_point_base;
/** Precomputed table of multiples of the base point on the curve. */
extern const struct ristretto255_precomputed_s *ristretto255_precomputed_base;
/** The scalar 1. */
extern const ristretto255_scalar_t ristretto255_scalar_one;
/** The scalar 0. */
extern const ristretto255_scalar_t ristretto255_scalar_zero;
/** The identity (zero) point on the curve. */
extern const ristretto255_point_t ristretto255_point_identity;
/** An arbitrarily-chosen base point on the curve. */
extern const ristretto255_point_t ristretto255_point_base;
/** Precomputed table of multiples of the base point on the curve. */
extern const ristretto255_precomputed_s *ristretto255_precomputed_base;
/**
 * @brief Read a scalar from wire format or from bytes.
 *
 * @param [in] ser Serialized form of a scalar.
 * @param [out] out Deserialized form.
 *
 * @retval RISTRETTO_SUCCESS The scalar was correctly encoded.
 * @retval RISTRETTO_FAILURE The scalar was greater than the modulus,
 * and has been reduced modulo that modulus.
 */
ristretto_error_t ristretto255_scalar_decode (
    ristretto255_scalar_t *out,
    const unsigned char ser[RISTRETTO255_SCALAR_BYTES]
) RISTRETTO_WARN_UNUSED RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Read a scalar from wire format or from bytes.  Reduces mod
 * scalar prime.
 *
 * @param [in] ser Serialized form of a scalar.
 * @param [in] ser_len Length of serialized form.
 * @param [out] out Deserialized form.
 */
void ristretto255_scalar_decode_long (
    ristretto255_scalar_t *out,
    const unsigned char *ser,
    size_t ser_len
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Serialize a scalar to wire format.
 *
 * @param [out] ser Serialized form of a scalar.
 * @param [in] s Deserialized scalar.
 */
void ristretto255_scalar_encode (
    unsigned char ser[RISTRETTO255_SCALAR_BYTES],
    const ristretto255_scalar_t *s
) RISTRETTO_NONNULL RISTRETTO_NOINLINE RISTRETTO_NOINLINE;
/**
 * @brief Add two scalars.  The scalars may use the same memory.
 * @param [in] a One scalar.
 * @param [in] b Another scalar.
 * @param [out] out a+b.
 */
void ristretto255_scalar_add (
    ristretto255_scalar_t *out,
    const ristretto255_scalar_t *a,
    const ristretto255_scalar_t *b
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Compare two scalars.
 * @param [in] a One scalar.
 * @param [in] b Another scalar.
 * @retval RISTRETTO_TRUE The scalars are equal.
 * @retval RISTRETTO_FALSE The scalars are not equal.
 */
ristretto_bool_t ristretto255_scalar_eq (
    const ristretto255_scalar_t *a,
    const ristretto255_scalar_t *b
) RISTRETTO_WARN_UNUSED RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Subtract two scalars.  The scalars may use the same memory.
 * @param [in] a One scalar.
 * @param [in] b Another scalar.
 * @param [out] out a-b.
 */
void ristretto255_scalar_sub (
    ristretto255_scalar_t *out,
    const ristretto255_scalar_t *a,
    const ristretto255_scalar_t *b
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Multiply two scalars.  The scalars may use the same memory.
 * @param [in] a One scalar.
 * @param [in] b Another scalar.
 * @param [out] out a*b.
 */
void ristretto255_scalar_mul (
    ristretto255_scalar_t *out,
    const ristretto255_scalar_t *a,
    const ristretto255_scalar_t *b
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
* @brief Halve a scalar.  The scalars may use the same memory.
* @param [in] a A scalar.
* @param [out] out a/2.
*/
void ristretto255_scalar_halve (
   ristretto255_scalar_t *out,
   const ristretto255_scalar_t *a
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Invert a scalar.  When passed zero, return 0.  The input and output may alias.
 * @param [in] a A scalar.
 * @param [out] out 1/a.
 * @return RISTRETTO_SUCCESS The input is nonzero.
 */
ristretto_error_t ristretto255_scalar_invert (
    ristretto255_scalar_t *out,
    const ristretto255_scalar_t *a
) RISTRETTO_WARN_UNUSED RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Set a scalar to an unsigned 64-bit integer.
 * @param [in] a An integer.
 * @param [out] out Will become equal to a.
 */
void ristretto255_scalar_set_unsigned (
    ristretto255_scalar_t *out,
    uint64_t a
) RISTRETTO_NONNULL;
/**
 * @brief Encode a point as a sequence of bytes.
 *
 * @param [out] ser The byte representation of the point.
 * @param [in] pt The point to encode.
 */
void ristretto255_point_encode (
    uint8_t ser[RISTRETTO255_SER_BYTES],
    const ristretto255_point_t *pt
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Decode a point from a sequence of bytes.
 *
 * Every point has a unique encoding, so not every
 * sequence of bytes is a valid encoding.  If an invalid
 * encoding is given, the output is undefined.
 *
 * @param [out] pt The decoded point.
 * @param [in] ser The serialized version of the point.
 * @param [in] allow_identity RISTRETTO_TRUE if the identity is a legal input.
 * @retval RISTRETTO_SUCCESS The decoding succeeded.
 * @retval RISTRETTO_FAILURE The decoding didn't succeed, because
 * ser does not represent a point.
 */
ristretto_error_t ristretto255_point_decode (
    ristretto255_point_t *pt,
    const uint8_t ser[RISTRETTO255_SER_BYTES],
    ristretto_bool_t allow_identity
) RISTRETTO_WARN_UNUSED RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Test whether two points are equal.  If yes, return
 * RISTRETTO_TRUE, else return RISTRETTO_FALSE.
 *
 * @param [in] a A point.
 * @param [in] b Another point.
 * @retval RISTRETTO_TRUE The points are equal.
 * @retval RISTRETTO_FALSE The points are not equal.
 */
ristretto_bool_t ristretto255_point_eq (
    const ristretto255_point_t *a,
    const ristretto255_point_t *b
) RISTRETTO_WARN_UNUSED RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Add two points to produce a third point.  The
 * input points and output point can be pointers to the same
 * memory.
 *
 * @param [out] sum The sum a+b.
 * @param [in] a An addend.
 * @param [in] b An addend.
 */
void ristretto255_point_add (
    ristretto255_point_t *sum,
    const ristretto255_point_t *a,
    const ristretto255_point_t *b
) RISTRETTO_NONNULL;
/**
 * @brief Double a point.  Equivalent to
 * ristretto255_point_add(two_a,a,a), but potentially faster.
 *
 * @param [out] two_a The sum a+a.
 * @param [in] a A point.
 */
void ristretto255_point_double (
    ristretto255_point_t *two_a,
    const ristretto255_point_t *a
) RISTRETTO_NONNULL;
/**
 * @brief Subtract two points to produce a third point.  The
 * input points and output point can be pointers to the same
 * memory.
 *
 * @param [out] diff The difference a-b.
 * @param [in] a The minuend.
 * @param [in] b The subtrahend.
 */
void ristretto255_point_sub (
    ristretto255_point_t *diff,
    const ristretto255_point_t *a,
    const ristretto255_point_t *b
) RISTRETTO_NONNULL;
/**
 * @brief Negate a point to produce another point.  The input
 * and output points can use the same memory.
 *
 * @param [out] nega The negated input point
 * @param [in] a The input point.
 */
void ristretto255_point_negate (
   ristretto255_point_t *nega,
   const ristretto255_point_t *a
) RISTRETTO_NONNULL;