tests/libristretto255-sys/src/lib.rs

//! Rust binding to libristretto255 intended for testing
//!
//! Automatically generated by rust-bindgen, however bindgen doesn't presently
//! support `#[repr(align)]`, so the resulting bindings have been checked-in.

#![crate_name = "libristretto255_sys"]
#![crate_type = "rlib"]
#![allow(non_camel_case_types, non_snake_case, non_upper_case_globals)]

#[cfg(not(target_pointer_width = "64"))]
compile_error!("This binding assumes a 64-bit architecture");

pub const RISTRETTO_WORD_BITS: u32 = 64;
pub const RISTRETTO255_SCALAR_LIMBS: u32 = 4;
pub const RISTRETTO255_SCALAR_BITS: u32 = 253;
pub const RISTRETTO255_SER_BYTES: u32 = 32;
pub const RISTRETTO255_HASH_BYTES: u32 = 32;
pub const RISTRETTO255_SCALAR_BYTES: u32 = 32;
pub const RISTRETTO255_INVERT_ELLIGATOR_WHICH_BITS: u32 = 5;
pub const RISTRETTO255_REMOVED_COFACTOR: u32 = 8;

pub type ristretto_word_t = u64;
pub type ristretto_sword_t = i64;
pub type ristretto_bool_t = u64;
pub type ristretto_dword_t = u128;
pub type ristretto_dsword_t = i128;

extern "C" {
    pub static mut RISTRETTO_TRUE: ristretto_bool_t;
}

extern "C" {
    pub static mut RISTRETTO_FALSE: ristretto_bool_t;
}

/// < The operation succeeded.
pub const RISTRETTO_SUCCESS: ristretto_error_t = -1;

/// < The operation failed.
pub const RISTRETTO_FAILURE: ristretto_error_t = 0;
/// Another boolean type used to indicate success or failure.

pub type ristretto_error_t = i32;

extern "C" {
    /// Overwrite data with zeros.  Uses memset_s if available.
    pub fn ristretto_bzero(data: *mut ::std::os::raw::c_void, size: usize);
}

#[repr(C, align(32))]
#[derive(Debug, Copy, Clone)]
pub struct gf_25519_t {
    pub limb: [ristretto_word_t; 5usize],
    pub __bindgen_padding_0: [u64; 3usize],
}

#[test]
fn bindgen_test_layout_gf_25519_t() {
    assert_eq!(
        ::std::mem::size_of::<gf_25519_t>(),
        64usize,
        concat!("Size of: ", stringify!(gf_25519_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<gf_25519_t>())).limb as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(gf_25519_t),
            "::",
            stringify!(limb)
        )
    );
}

/// Representation of a point on the elliptic curve.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ristretto255_point_t {
    /// @cond internal
    pub x: gf_25519_t,
    /// @cond internal
    pub y: gf_25519_t,
    /// @cond internal
    pub z: gf_25519_t,
    /// @cond internal
    pub t: gf_25519_t,
}

#[test]
fn bindgen_test_layout_ristretto255_point_t() {
    assert_eq!(
        ::std::mem::size_of::<ristretto255_point_t>(),
        256usize,
        concat!("Size of: ", stringify!(ristretto255_point_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ristretto255_point_t>())).x as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ristretto255_point_t),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ristretto255_point_t>())).y as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ristretto255_point_t),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ristretto255_point_t>())).z as *const _ as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(ristretto255_point_t),
            "::",
            stringify!(z)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ristretto255_point_t>())).t as *const _ as usize },
        192usize,
        concat!(
            "Offset of field: ",
            stringify!(ristretto255_point_t),
            "::",
            stringify!(t)
        )
    );
}

/// Precomputed table based on a point.  Can be trivial implementation.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ristretto255_precomputed_s {
    _unused: [u8; 0],
}
extern "C" {
    pub static mut ristretto255_sizeof_precomputed_s: usize;
    pub static mut ristretto255_alignof_precomputed_s: usize;
}

/// Representation of an element of the scalar field.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ristretto255_scalar_t {
    /// @cond internal
    pub limb: [ristretto_word_t; 4usize],
}

#[test]
fn bindgen_test_layout_ristretto255_scalar_t() {
    assert_eq!(
        ::std::mem::size_of::<ristretto255_scalar_t>(),
        32usize,
        concat!("Size of: ", stringify!(ristretto255_scalar_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ristretto255_scalar_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ristretto255_scalar_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ristretto255_scalar_t>())).limb as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ristretto255_scalar_t),
            "::",
            stringify!(limb)
        )
    );
}

extern "C" {
    pub static mut ristretto255_scalar_one: ristretto255_scalar_t;
    pub static mut ristretto255_scalar_zero: ristretto255_scalar_t;
    pub static mut ristretto255_point_identity: ristretto255_point_t;
    pub static mut ristretto255_point_base: ristretto255_point_t;
    pub static mut ristretto255_precomputed_base: *const ristretto255_precomputed_s;

    /// @brief Read a scalar from wire format or from bytes.
    ///
    /// @param [in] ser Serialized form of a scalar.
    /// @param [out] out Deserialized form.
    ///
    /// @retval RISTRETTO_SUCCESS The scalar was correctly encoded.
    /// @retval RISTRETTO_FAILURE The scalar was greater than the modulus,
    /// and has been reduced modulo that modulus.
    pub fn ristretto255_scalar_decode(
        out: *mut ristretto255_scalar_t,
        ser: *const ::std::os::raw::c_uchar,
    ) -> ristretto_error_t;

    /// @brief Read a scalar from wire format or from bytes.  Reduces mod
    /// scalar prime.
    ///
    /// @param [in] ser Serialized form of a scalar.
    /// @param [in] ser_len Length of serialized form.
    /// @param [out] out Deserialized form.
    pub fn ristretto255_scalar_decode_long(
        out: *mut ristretto255_scalar_t,
        ser: *const ::std::os::raw::c_uchar,
        ser_len: usize,
    );

    /// @brief Serialize a scalar to wire format.
    ///
    /// @param [out] ser Serialized form of a scalar.
    /// @param [in] s Deserialized scalar.
    pub fn ristretto255_scalar_encode(
        ser: *mut ::std::os::raw::c_uchar,
        s: *const ristretto255_scalar_t,
    );

    /// @brief Add two scalars.  The scalars may use the same memory.
    /// @param [in] a One scalar.
    /// @param [in] b Another scalar.
    /// @param [out] out a+b.
    pub fn ristretto255_scalar_add(
        out: *mut ristretto255_scalar_t,
        a: *const ristretto255_scalar_t,
        b: *const ristretto255_scalar_t,
    );

    /// @brief Compare two scalars.
    /// @param [in] a One scalar.
    /// @param [in] b Another scalar.
    /// @retval RISTRETTO_TRUE The scalars are equal.
    /// @retval RISTRETTO_FALSE The scalars are not equal.
    pub fn ristretto255_scalar_eq(
        a: *const ristretto255_scalar_t,
        b: *const ristretto255_scalar_t,
    ) -> ristretto_bool_t;

    /// @brief Subtract two scalars.  The scalars may use the same memory.
    /// @param [in] a One scalar.
    /// @param [in] b Another scalar.
    /// @param [out] out a-b.
    pub fn ristretto255_scalar_sub(
        out: *mut ristretto255_scalar_t,
        a: *const ristretto255_scalar_t,
        b: *const ristretto255_scalar_t,
    );

    /// @brief Multiply two scalars.  The scalars may use the same memory.
    /// @param [in] a One scalar.
    /// @param [in] b Another scalar.
    /// @param [out] out a*b.
    pub fn ristretto255_scalar_mul(
        out: *mut ristretto255_scalar_t,
        a: *const ristretto255_scalar_t,
        b: *const ristretto255_scalar_t,
    );

    /// @brief Halve a scalar.  The scalars may use the same memory.
    /// @param [in] a A scalar.
    /// @param [out] out a/2.
    pub fn ristretto255_scalar_halve(
        out: *mut ristretto255_scalar_t,
        a: *const ristretto255_scalar_t,
    );

    /// @brief Invert a scalar.  When passed zero, return 0.  The input and output may alias.
    /// @param [in] a A scalar.
    /// @param [out] out 1/a.
    /// @return RISTRETTO_SUCCESS The input is nonzero.
    pub fn ristretto255_scalar_invert(
        out: *mut ristretto255_scalar_t,
        a: *const ristretto255_scalar_t,
    ) -> ristretto_error_t;

    /// @brief Set a scalar to an unsigned 64-bit integer.
    /// @param [in] a An integer.
    /// @param [out] out Will become equal to a.
    pub fn ristretto255_scalar_set_unsigned(out: *mut ristretto255_scalar_t, a: u64);

    /// @brief Encode a point as a sequence of bytes.
    ///
    /// @param [out] ser The byte representation of the point.
    /// @param [in] pt The point to encode.
    pub fn ristretto255_point_encode(ser: *mut u8, pt: *const ristretto255_point_t);

    /// @brief Decode a point from a sequence of bytes.
    ///
    /// Every point has a unique encoding, so not every
    /// sequence of bytes is a valid encoding.  If an invalid
    /// encoding is given, the output is undefined.
    ///
    /// @param [out] pt The decoded point.
    /// @param [in] ser The serialized version of the point.
    /// @param [in] allow_identity RISTRETTO_TRUE if the identity is a legal input.
    /// @retval RISTRETTO_SUCCESS The decoding succeeded.
    /// @retval RISTRETTO_FAILURE The decoding didn't succeed, because
    /// ser does not represent a point.
    pub fn ristretto255_point_decode(
        pt: *mut ristretto255_point_t,
        ser: *const u8,
        allow_identity: ristretto_bool_t,
    ) -> ristretto_error_t;

    /// @brief Test whether two points are equal.  If yes, return
    /// RISTRETTO_TRUE, else return RISTRETTO_FALSE.
    ///
    /// @param [in] a A point.
    /// @param [in] b Another point.
    /// @retval RISTRETTO_TRUE The points are equal.
    /// @retval RISTRETTO_FALSE The points are not equal.
    pub fn ristretto255_point_eq(
        a: *const ristretto255_point_t,
        b: *const ristretto255_point_t,
    ) -> ristretto_bool_t;

    /// @brief Add two points to produce a third point.  The
    /// input points and output point can be pointers to the same
    /// memory.
    ///
    /// @param [out] sum The sum a+b.
    /// @param [in] a An addend.
    /// @param [in] b An addend.
    pub fn ristretto255_point_add(
        sum: *mut ristretto255_point_t,
        a: *const ristretto255_point_t,
        b: *const ristretto255_point_t,
    );

    /// @brief Double a point.  Equivalent to
    /// ristretto255_point_add(two_a,a,a), but potentially faster.
    ///
    /// @param [out] two_a The sum a+a.
    /// @param [in] a A point.
    pub fn ristretto255_point_double(
        two_a: *mut ristretto255_point_t,
        a: *const ristretto255_point_t,
    );

    /// @brief Subtract two points to produce a third point.  The
    /// input points and output point can be pointers to the same
    /// memory.
    ///
    /// @param [out] diff The difference a-b.
    /// @param [in] a The minuend.
    /// @param [in] b The subtrahend.
    pub fn ristretto255_point_sub(
        diff: *mut ristretto255_point_t,
        a: *const ristretto255_point_t,
        b: *const ristretto255_point_t,
    );

    /// @brief Negate a point to produce another point.  The input
    /// and output points can use the same memory.
    ///
    /// @param [out] nega The negated input point
    /// @param [in] a The input point.
    pub fn ristretto255_point_negate(
        nega: *mut ristretto255_point_t,
        a: *const ristretto255_point_t,
    );
